--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lesson1</string>
+    <string name="press">Отправить</string>
+    <string name="add_text">Введите любой текст</string>
+    <string name="rainbow_btn">Радуга</string>
 </resources>
